--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -5,5 +5,21 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_home"
             android:title="Home" />
+        <item
+            android:id="@+id/nav_Productlist"
+            android:icon="@drawable/ic_home"
+            android:title="Product list" />
+        <item
+            android:id="@+id/nav_Cart"
+            android:icon="@drawable/ic_home"
+            android:title="Cart" />
+        <item
+            android:id="@+id/nav_Profile"
+            android:icon="@drawable/ic_home"
+            android:title="Profile" />
+        <item
+            android:id="@+id/nav_Favorites"
+            android:icon="@drawable/ic_home"
+            android:title="Favorites" />
     </group>
 </menu>
