--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -7,19 +7,19 @@
             android:title="Home" />
         <item
             android:id="@+id/nav_Productlist"
-            android:icon="@drawable/ic_home"
-            android:title="Product list" />
+            android:icon="@drawable/ic_categories"
+            android:title="Categories" />
         <item
             android:id="@+id/nav_Cart"
-            android:icon="@drawable/ic_home"
+            android:icon="@drawable/ic_cart"
             android:title="Cart" />
         <item
             android:id="@+id/nav_Profile"
-            android:icon="@drawable/ic_home"
+            android:icon="@drawable/ic_profile"
             android:title="Profile" />
         <item
             android:id="@+id/nav_Favorites"
-            android:icon="@drawable/ic_home"
+            android:icon="@drawable/ic_fav"
             android:title="Favorites" />
     </group>
 </menu>
