--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.FavoriteFragment">
+    tools:context=".ui.FavoritesFragment">
 
     <LinearLayout
         android:id="@+id/filter_layout"
@@ -18,7 +18,7 @@
 
         <Spinner
             android:id="@+id/spinner"
-            android:layout_width="0dp"
+            android:layout_width="24dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
