--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,14 +11,14 @@
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
-        android:id="@+id/ITstudio"
+        android:id="@+id/WisdomClassroom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/audiowide"
-        android:text="IT Studio"
+        android:text="Wisdom Classroom"
         android:textAlignment="center"
         android:textSize="34sp"
         android:textStyle="bold"
@@ -28,15 +28,19 @@
 
     <ImageView
         android:id="@+id/banner_image"
-        android:layout_width="match_parent"
+        android:layout_width="414dp"
         android:layout_height="200dp"
         android:layout_below="@+id/text_recommend"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="32dp"
         android:scaleType="centerCrop"
-        app:layout_constraintTop_toBottomOf="@+id/ITstudio"
-        tools:layout_editor_absoluteX="0dp"
-        tools:src="@tools:sample/avatars" />
+        android:src="@drawable/banner"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/WisdomClassroom"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/text_recommend"
@@ -49,6 +53,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/banner_image" />
 
@@ -71,7 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="NOTEBOOK DELL VOSTRO\n\nราคา 25,990.00 บาท"
+        android:text="ดินสอกด 2B\n\nราคา 5.00 บาท"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.183"
@@ -95,10 +100,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="MICROSOFT OFFICE HOME 2024 \n(FPP)\n\n ราคา 3,190.00 บาท"
+        android:text="Quantum ปากกาลูกลื่น\n0.5 มม. หมึกน้ำเงิน\n ราคา 10.00 บาท"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.878"
+        app:layout_constraintHorizontal_bias="0.733"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recommend2" />
 
