--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -59,8 +59,8 @@
 
     <ImageView
         android:id="@+id/recommend1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="44dp"
@@ -69,7 +69,7 @@
         app:layout_constraintHorizontal_bias="0.164"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_recommend"
-        tools:src="@tools:sample/avatars" />
+        android:src="@drawable/p1" />
 
     <TextView
         android:id="@+id/recomitem1"
@@ -85,15 +85,15 @@
 
     <ImageView
         android:id="@+id/recommend2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="52dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_recommend"
-        tools:src="@tools:sample/avatars" />
+        android:src="@drawable/p2" />
 
     <TextView
         android:id="@+id/recomitem2"
@@ -109,8 +109,8 @@
 
     <ImageView
         android:id="@+id/pro1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="44dp"
@@ -119,7 +119,7 @@
         app:layout_constraintHorizontal_bias="0.169"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/promotion"
-        tools:src="@tools:sample/avatars" />
+        android:src="@drawable/p3" />
 
     <TextView
         android:id="@+id/promoitem1"
@@ -149,15 +149,15 @@
 
     <ImageView
         android:id="@+id/pro2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="52dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/promotion"
-        tools:src="@tools:sample/avatars" />
+        android:src="@drawable/p4" />
 
     <TextView
         android:id="@+id/promoitem2"
