อัปเดตหน้าต่าง ๆ

--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -16,14 +16,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:id="@+id/category_text"
+        <Spinner
+            android:id="@+id/categorySpinner"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="สินค้าทั้งหมด"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:layout_weight="1" />
 
     </LinearLayout>
 
