--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -18,14 +18,13 @@
 
         <Spinner
             android:id="@+id/spinner"
-            android:layout_width="24dp"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"  android:layout_height="wrap_content"
             android:layout_weight="1" />
 
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/favorite_recycler_view"
+        android:id="@+id/favoritesRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/filter_layout"
